--- a/EngineeringSight/DataMgmt.Buisness/DataMgmt.Buisness.csproj
+++ b/EngineeringSight/DataMgmt.Buisness/DataMgmt.Buisness.csproj
@@ -45,9 +45,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappings\Mapper.cs" />
+    <Compile Include="Model\Course.cs" />
     <Compile Include="Model\University.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Default\CourseMgmtService.cs" />
     <Compile Include="Services\Default\UniversityMgmtService.cs" />
+    <Compile Include="Services\ICourseMgmtService.cs" />
     <Compile Include="Services\IUniversityMgmtService.cs" />
   </ItemGroup>
   <ItemGroup>
